force-app/main/default/objects/NI_Customer_Persona__c/NI_Customer_Persona__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008718

Tuned in organizations understand that the best way to develop products and services that resonate is to identify the unresolved problems of a particular group of people. By breaking buyers into distinct groups, understanding what problems those groups (or &quot;buyer personas&quot;) have and how to solve them, and then cataloging everything you know about each buyer persona, your hard work becomes easier. You are more likely to create breakthrough experiences, articulate powerful ideas about what your organization can do, and establish connections with people. This approach is utterly different from what most organizations do: either not segmenting the market at all (creating nonspecific offerings and marketing them to everyone) or segmenting based on their own egotistical view of the world.</description>
    <label>Customer Persona</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Personas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>