force-app/main/default/objects/NI_Customer_Persona__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Education Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>