force-app/main/default/objects/NI_Customer_Persona__c/fields/Primary_Business_Focus__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Focus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Business Focus</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>