force-app/main/default/objects/NI_Customer_Persona__c/fields/Solution_Entrance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Solution_Entrance_Criteria__c</fullName>
    <description>What the persona considers table stakes for any solution</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What the persona considers table stakes for any solution</inlineHelpText>
    <label>Solution Entrance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>