force-app/main/default/objects/NI_Customer_Persona__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The most common title this persona holds in an organization.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The most common title this persona holds in an organization.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>