force-app/main/default/objects/NI_Customer_Persona__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Average_Age__c</columns>
    <columns>Primary_Business_Focus__c</columns>
    <columns>Concerns_and_Frustrations__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Department__c</columns>
    <columns>Buyer_or_Influencer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>